<resources>
    <string name="app_name">Tracker</string>
    <string name="permissions_db_name">permissions</string>
    <string name="options_db_name">options</string>
    <string name="options">Options</string>
    <string name="content_description_options">Tracking options...</string>
    <string name="content_description_fab">Start tracking FAB</string>
    <string name="search">Search</string>
    <string name="content_description_search">Search recorded tracks</string>
    <string name="share">Share</string>
    <string name="content_description_share">Track sharing</string>
    <string name="no_recorded_tracks">No recorded tracks</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save">Save</string>
    <string name="append">Append</string>
    <string name="discard">Discard</string>
    <string name="cancel">Cancel</string>
    <string name="remaining_points_dialog_title">Handle saved points</string>
    <string name="remaining_points_dialog_message">There are remaining points from last recording.</string>
    <string name="gpx_file_icon">gpx file icon</string>
    <string name="enable_background_location">Enable background location</string>
    <string name="enhance_app_with_background_location_permissions">Enhance app with background location permissions.</string>
    <string name="delete_file">Delete file</string>
    <string name="delete_selected_files">Delete selected files</string>
    <string name="author_name">author name</string>
    <string name="recording_description">recording description</string>
    <string name="background_enhanced">Background location %1$s</string>
    <string name="enabled">enabled</string>
    <string name="disabled">disabled</string>
    <string name="accuracy_threshold">accuracy threshold</string>
    <string name="file_deletion_confirmation_dialog_title">Files removal</string>
    <string name="file_deletion_confirmation_dialog_message">Do you really want to delete %1$d files?</string>
    <string name="provide_filename">Provide filename</string>
    <string name="filename">filename</string>
    <string name="ok">OK</string>

</resources>