<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/options"
        android:title="@string/options"
        android:contentDescription="@string/content_description_options" />

    <item
        android:id="@+id/background_enhance"
        android:title="@string/enable_background_location"
        android:contentDescription="@string/enhance_app_with_background_location_permissions" />

    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_baseline_delete_24"
        android:title="@string/delete_file"
        android:contentDescription="@string/delete_selected_files"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_share_24"
        android:title="@string/share"
        android:contentDescription="@string/content_description_share"
        app:showAsAction="ifRoom" />

</menu>