<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/frameLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".dialogs.RemainingPointsDialog">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:textColor="@color/black"
        android:text="@string/remaining_points_dialog_title"
        android:textSize="24sp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_dialog_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_dialog_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/remaining_points_dialog_message"
        android:paddingHorizontal="20dp"
        android:paddingVertical="10dp"
        android:textSize="20sp"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_append"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/append"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_dialog_message"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_append"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_discard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/discard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_save"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bt_discard"/>

</androidx.constraintlayout.widget.ConstraintLayout>