<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/options_dialog_layout"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".dialogs.OptionsDialog">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/options_dialog_element_margin"
        android:hint="@string/author_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_author_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minWidth="200dp"
            android:textSize="@dimen/options_dialog_text_size"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/options_dialog_element_margin"
        android:hint="@string/recording_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_recording_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minWidth="300dp"
            android:textSize="@dimen/options_dialog_text_size"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/options_dialog_element_margin"
        android:hint="@string/accuracy_threshold">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tiet_accuracy_threshold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:digits="0123456789."
            android:inputType="number"
            android:gravity="center"
            android:minWidth="300dp"
            android:textSize="@dimen/options_dialog_text_size"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_background_enhanced"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/options_dialog_element_margin"
        android:textSize="@dimen/options_dialog_text_size"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:padding="@dimen/options_dialog_element_margin"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/options_dialog_button_text_size"
            android:text="@string/save"
            android:layout_margin="@dimen/options_dialog_element_margin"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/options_dialog_button_text_size"
            android:text="@string/cancel"
            android:layout_margin="@dimen/options_dialog_element_margin"/>
    </LinearLayout>


</LinearLayout>